2002-04-27  Vince Darley <vincentdarley@sourceforge.net>
	* tests/vfs.test: tests work independent of directory in which
	they run.  Tests added to check that at least 'vfs::memchan'
	basically works.
	* mac/*: updated for removal of scripdoc.tcl and vfs.tcl
	
2002-04-25  Jean-Claude Wippler <jcw@equi4.com>
	* library/*vfs.tcl: switching to vfs::{crc,memchan,zip}
	* library/vfsUtils.tcl: fixed env to be global, added unset
	so unmounting cleans up its list of mounted file systems,
	define Trf/memchan-based versions of vfs::{crc,memchan,zip}
	* library/{scripdoc.tcl,vfs.tcl}: removed, tclkit specific
	* library/pkgIndex.tcl: drop packages "scripdoc" and "vfslib"

2002-04-25  Vince Darley <vincentdarley@sourceforge.net>
	* tests/*: revamp of tests to be more robust, and to be
	able to run from inside a mounted virtual filesystem.
	
2002-04-09  Jean-Claude Wippler <jcw@equi4.com>
	* configure: generated and added to project

2002-04-08  Daniel Steffen  <das@users.sourceforge.net>
	* mac/pkgIndex_mac.tcl: synced to generic/pkgIndex.tcl

2002-04-01  Vince Darley <vincentdarley@sourceforge.net>
	* Makefile.in: compilation fix from jcw.
	
2002-03-16  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: updated for latest cvs head of Tcl 8.4a5.
	* library/vfs.tcl: New version from jcw, with better handling
	of env(PATH).

2002-03-09  Vince Darley <vincentdarley@sourceforge.net>
	* library/mk4vfs.tcl: updated version from Jean-Claude Wippler.

2002-03-01  Vince Darley <vincentdarley@sourceforge.net>
	* library/*.tcl: completed and tested most changes from 02-19.

2002-02-19  Vince Darley <vincentdarley@sourceforge.net>
	* library/*.tcl: updated the vfs implementations to deal
	with the 2002-02-01 change below.  More work needed.

2002-02-17  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: updated for TIP#72 application to cvs head.
	The 'file stat' implementation now deals with files of size
	greater than a 32 bit representation.  This requires the